--- a/src/components/mainLayout/layoutComponents/Navbar/MainNavigation/mainNavigation.scss
+++ b/src/components/mainLayout/layoutComponents/Navbar/MainNavigation/mainNavigation.scss
@@ -70,29 +70,29 @@ $transparent: transparent;
                         transparent 94%,
                         transparent 100%
                     )
-                    top 0 right 0/0px 45px,
+                    top 1px right 0/0px 45px,
                 linear-gradient(0deg, transparent 70%, transparent 70%) top 1px
-                    right 0/0px 44px,
+                    right 0/0px 45px,
                 radial-gradient(
                         100% 70% at bottom right,
                         transparent 97%,
                         transparent 100%
                     )
-                    top 0 right 0/0px 45px,
+                    top 1px right 0/0px 45px,
                 radial-gradient(
                         100% 30% at bottom left,
                         transparent 97%,
                         transparent 100%
                     )
                     top 45px right 0/0px 45px,
-                linear-gradient(0deg, transparent 30%, transparent 30%) top 44px
-                    right 0/0px 47px,
+                linear-gradient(0deg, transparent 30%, transparent 30%) top 45px
+                    right 0/0px 45px,
                 radial-gradient(
                         100% 70% at top right,
                         transparent 97%,
                         transparent 100%
                     )
-                    top 45px right 0/0px 46px;
+                    top 45px right 0/0px 45px;
             background-repeat: no-repeat;
         }
 
@@ -102,29 +102,29 @@ $transparent: transparent;
                         transparent 94%,
                         transparent 100%
                     )
-                    top 0 right 0/0px 45px,
+                    top 1px right 0/0px 45px,
                 linear-gradient(0deg, transparent 70%, transparent 70%) top 1px
-                    right 0/0px 44px,
+                    right 0/0px 45px,
                 radial-gradient(
                         100% 70% at bottom right,
                         transparent 97%,
                         transparent 100%
                     )
-                    top 0 right 0/0px 45px,
+                    top 1px right 0/0px 45px,
                 radial-gradient(
                         100% 30% at bottom left,
                         transparent 97%,
                         transparent 100%
                     )
                     top 45px right 0/0px 45px,
-                linear-gradient(0deg, transparent 30%, transparent 30%) top 44px
-                    right 0/0px 47px,
+                linear-gradient(0deg, transparent 30%, transparent 30%) top 45px
+                    right 0/0px 45px,
                 radial-gradient(
                         100% 70% at top right,
                         transparent 97%,
                         transparent 100%
                     )
-                    top 45px right 0/0px 46px;
+                    top 45px right 0/0px 45px;
             background-repeat: no-repeat;
         }
     }
@@ -136,29 +136,29 @@ $transparent: transparent;
                         transparent 94%,
                         $color-grey-1 100%
                     )
-                    top 0 right 0/18px 45px,
+                    top 1px right 0/18px 45px,
                 linear-gradient(0deg, $color-grey-1 70%, transparent 70%) top
-                    1px right 18px/29px 44px,
+                    1px right 17px/29px 45px,
                 radial-gradient(
                         100% 70% at bottom right,
-                        $color-grey-1 97%,
+                        $color-grey-1 98%,
                         transparent 100%
                     )
-                    top 0 right 46px/29px 45px,
+                    top 1px right 45px/29px 45px,
                 radial-gradient(
                         100% 30% at bottom left,
-                        transparent 97%,
+                        transparent 98%,
                         $color-grey-1 100%
                     )
                     top 45px right 0/18px 45px,
                 linear-gradient(0deg, transparent 30%, $color-grey-1 30%) top
-                    44px right 18px/29px 47px,
+                    45px right 17px/29px 45px,
                 radial-gradient(
                         100% 70% at top right,
-                        $color-grey-1 97%,
+                        $color-grey-1 98%,
                         transparent 100%
                     )
-                    top 45px right 46px/29px 46px;
+                    top 45px right 45px/29px 45px;
             background-repeat: no-repeat;
         }
 
@@ -168,15 +168,15 @@ $transparent: transparent;
                         transparent 94%,
                         $color-grey-1 100%
                     )
-                    top 0 right 0/18px 45px,
+                    top 1px right 0/18px 45px,
                 linear-gradient(0deg, $color-grey-1 70%, transparent 70%) top
-                    1px right 18px/139px 44px,
+                    1px right 17px/139px 45px,
                 radial-gradient(
                         100% 70% at bottom right,
                         $color-grey-1 97%,
                         transparent 100%
                     )
-                    top 0 right 156px/29px 45px,
+                    top 1px right 154px/29px 45px,
                 radial-gradient(
                         100% 30% at bottom left,
                         transparent 97%,
@@ -184,13 +184,13 @@ $transparent: transparent;
                     )
                     top 45px right 0/18px 45px,
                 linear-gradient(0deg, transparent 30%, $color-grey-1 30%) top
-                    44px right 18px/139px 47px,
+                    45px right 17px/139px 45px,
                 radial-gradient(
                         100% 70% at top right,
                         $color-grey-1 97%,
                         transparent 100%
                     )
-                    top 45px right 156px/29px 46px;
+                    top 45px right 154px/29px 45px;
             background-repeat: no-repeat;
         }
     }
@@ -240,15 +240,15 @@ $transparent: transparent;
                         transparent 94%,
                         $color-hover-purple 100%
                     )
-                    top 0 right 0/18px 45px,
+                    top 1px right 0/18px 45px,
                 linear-gradient(0deg, $color-hover-purple 70%, transparent 70%)
-                    top 1px right 18px/29px 44px,
+                    top 1px right 17px/29px 45px,
                 radial-gradient(
                         100% 70% at bottom right,
                         $color-hover-purple 97%,
                         transparent 100%
                     )
-                    top 0 right 46px/29px 45px,
+                    top 1px right 44px/29px 45px,
                 radial-gradient(
                         100% 30% at bottom left,
                         transparent 97%,
@@ -256,13 +256,13 @@ $transparent: transparent;
                     )
                     top 45px right 0/18px 45px,
                 linear-gradient(0deg, transparent 30%, $color-hover-purple 30%)
-                    top 44px right 18px/29px 47px,
+                    top 45px right 17px/29px 45px,
                 radial-gradient(
                         100% 70% at top right,
                         $color-hover-purple 97%,
                         transparent 100%
                     )
-                    top 45px right 46px/29px 46px;
+                    top 45px right 44px/29px 45px;
             background-repeat: no-repeat;
         }
 
@@ -272,15 +272,15 @@ $transparent: transparent;
                         transparent 94%,
                         $color-hover-purple 100%
                     )
-                    top 0 right 0/18px 45px,
+                    top 1px right 0/18px 45px,
                 linear-gradient(0deg, $color-hover-purple 70%, transparent 70%)
-                    top 1px right 18px/139px 44px,
+                    top 1px right 17px/139px 45px,
                 radial-gradient(
                         100% 70% at bottom right,
                         $color-hover-purple 97%,
                         transparent 100%
                     )
-                    top 0 right 156px/29px 45px,
+                    top 1px right 154px/29px 45px,
                 radial-gradient(
                         100% 30% at bottom left,
                         transparent 97%,
@@ -288,13 +288,13 @@ $transparent: transparent;
                     )
                     top 45px right 0/18px 45px,
                 linear-gradient(0deg, transparent 30%, $color-hover-purple 30%)
-                    top 44px right 18px/139px 47px,
+                    top 45px right 17px/139px 45px,
                 radial-gradient(
                         100% 70% at top right,
                         $color-hover-purple 97%,
                         transparent 100%
                     )
-                    top 45px right 156px/29px 46px;
+                    top 45px right 154px/29px 45px;
             background-repeat: no-repeat;
         }
 
