--- a/src/components/RestaurantInfo/RestCategories/rest-categories.scss
+++ b/src/components/RestaurantInfo/RestCategories/rest-categories.scss
@@ -3,8 +3,8 @@
 .categories {
     align-items: center;
     display: flex;
+    flex-wrap: wrap;
     padding: 4px 0;
-    width: 50%;
 
     &__name {
         color: $color-grey-6;
@@ -13,8 +13,10 @@
         text-transform: uppercase;
     }
 
-    svg {
-        flex-shrink: 0;
-        padding: 0 12px;
+    &__icon {
+        svg {
+            flex-shrink: 0;
+            padding: 3px 12px;
+        }
     }
 }
