--- a/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
+++ b/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
@@ -43,7 +43,7 @@
         padding-right: 16px;
         padding-bottom: 16px;
     }
-    &__name-like {
+    &__title-like {
         @include flex-space-between;
     }
 }
