--- a/src/components/RestaurantCards/RestaurantIntroCard/restaurant-intro-card.scss
+++ b/src/components/RestaurantCards/RestaurantIntroCard/restaurant-intro-card.scss
@@ -2,7 +2,6 @@
 
 .restaurant-intro-card {
     @include flex-center;
-    width: auto;
     padding: 53px 40px;
     flex-direction: column;
 
@@ -10,7 +9,6 @@
         font-weight: 900;
         text-align: center;
         line-height: 32px;
-        margin: 0;
-        margin-bottom: 24px;
+        margin: 0 0 24px 0;
     }
 }
