--- a/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
+++ b/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
@@ -3,8 +3,9 @@
 .restaurant-card {
     &__top {
         position: relative;
-        height: 180px;
+        height: 185px;
     }
+
     &__checkins-rating {
         @include flex-space-between;
         position: absolute;
@@ -12,13 +13,15 @@
         width: calc(100% - 32px);
         padding: 16px 16px 0 16px;
     }
+
     &__categories {
         position: absolute;
-        bottom: 0;
+        bottom: 10px;
         z-index: 2;
         width: calc(100% - 32px);
         padding: 0 16px;
     }
+
     &__background {
         width: 100%;
         height: 180px;
@@ -30,19 +33,31 @@
         z-index: 1;
         position: absolute;
     }
+
     &__image {
         object-fit: cover;
         width: 100%;
         height: 180px;
         border-radius: 8px 8px 0px 0px;
     }
+
     &__middle {
         margin: 0;
-        padding-left: 16px;
-        padding-right: 16px;
-        padding-bottom: 16px;
+        padding: 0 16px 16px 16px;
+        position: relative;
+        height: 30px;
     }
+
     &__title-like {
         @include flex-space-between;
+        position: absolute;
+        top: -18px;
+        z-index: 3;
+        width: calc(100% - 32px);
+    }
+
+    &__hours {
+        position: absolute;
+        top: 7px;
     }
 }
