--- a/src/components/RestaurantInfo/RestCategories/rest-categories.scss
+++ b/src/components/RestaurantInfo/RestCategories/rest-categories.scss
@@ -4,6 +4,7 @@
     align-items: center;
     display: flex;
     flex-wrap: wrap;
+    padding: 4px 0;
 
     &__name {
         color: $color-grey-6;
