SOUR-43-Global html, body and app style added to layout.scss

--- a/src/components/mainLayout/layout.scss
+++ b/src/components/mainLayout/layout.scss
@@ -1,6 +1,18 @@
 @import '../../styles/base/base';
 @import '../../styles/base/colors';
 
+html,
+body,
+body > div,
+.app {
+    font-family: $main-font;
+    height: 100%;
+}
+
+body {
+    margin: 0;
+}
+
 .layout__wrapper {
     display: grid;
     grid-template-areas:
