--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -1,3 +1,5 @@
+@import '../../styles/base/base';
+
 .dashboard {
     &__header {
         display: flex;
@@ -5,9 +7,11 @@
         justify-content: space-between;
         margin: 40px 0;
     }
+
     &__heading {
         font-weight: 900;
         line-height: 32px;
         margin: 0;
+        color: $color-pickled-bluewood;
     }
 }
