--- a/src/components/RestaurantCards/RestaurantIntroCard/restaurant-intro-card.scss
+++ b/src/components/RestaurantCards/RestaurantIntroCard/restaurant-intro-card.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/mixins/mixins';
+@import '../../../styles/base/base';
 
 .restaurant-intro-card {
     @include flex-center;
@@ -10,5 +11,7 @@
         text-align: center;
         line-height: 32px;
         margin: 0 0 24px 0;
+        color: $color-black;
+        opacity: 0.7;
     }
 }
