--- a/src/components/CardContainer/card-container.scss
+++ b/src/components/CardContainer/card-container.scss
@@ -1,11 +1,11 @@
 @import '../../styles/base/base';
 
 .card-container {
-    max-width: 395px;
     background-color: $color-white;
     border-radius: 8px;
+    max-width: 395px;
 
     &--shadow {
-        box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
     }
 }
