--- a/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
+++ b/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
@@ -1,59 +1,60 @@
 @import '../../../styles/mixins/mixins';
+@import '../../../styles/base/base';
 
 .restaurant-card {
     &__top {
-        position: relative;
         height: 185px;
+        position: relative;
     }
 
     &__checkins-rating {
         @include flex-space-between;
+        padding: 16px 16px 0;
         position: absolute;
-        z-index: 2;
         width: calc(100% - 32px);
-        padding: 16px 16px 0 16px;
+        z-index: $z-index-higher;
     }
 
     &__categories {
-        position: absolute;
         bottom: 10px;
-        z-index: 2;
-        width: calc(100% - 32px);
         padding: 0 16px;
+        position: absolute;
+        width: calc(100% - 32px);
+        z-index: $z-index-higher;
     }
 
     &__background {
-        width: 100%;
-        height: 180px;
         background: linear-gradient(
             180deg,
             rgba(255, 255, 255, 0) 0%,
-            #ffffff 100%
+            #fff 100%
         );
-        z-index: 1;
+        height: 180px;
         position: absolute;
+        width: 100%;
+        z-index: $z-index-base;
     }
 
     &__image {
+        border-radius: 8px 8px 0 0;
+        height: 180px;
         object-fit: cover;
         width: 100%;
-        height: 180px;
-        border-radius: 8px 8px 0px 0px;
     }
 
     &__middle {
-        margin: 0;
-        padding: 0 16px 16px 16px;
-        position: relative;
         height: 30px;
+        margin: 0;
+        padding: 0 16px 16px;
+        position: relative;
     }
 
     &__title-like {
         @include flex-space-between;
         position: absolute;
         top: -18px;
-        z-index: 3;
         width: calc(100% - 32px);
+        z-index: $z-index-timeline;
     }
 
     &__hours {
