--- a/src/components/Rating/rating.scss
+++ b/src/components/Rating/rating.scss
@@ -23,19 +23,18 @@
     width: 145px;
 
     &__star {
-        background: none;
-        border: 0;
-        content: url('../../assets/starFilled.svg');
+        appearance: none;
+        content: url('../../assets/starEmpty.svg');
         cursor: pointer;
-        padding: 8px 8px 8px 0;
+        margin: 0;
+        padding: 10px 8px 6px 0;
         position: relative;
 
-        &:hover {
-            &::before,
-            ~ #{$_this}__star::before {
+        &:hover,
+        &:checked {
+            content: url('../../assets/starFilled.svg');
+            ~ #{$_this}__star {
                 content: url('../../assets/starFilled.svg');
-                padding-top: 8px;
-                position: absolute;
             }
         }
     }
@@ -43,11 +42,6 @@
     &__expand {
         direction: rtl;
         unicode-bidi: bidi-override;
-
-        svg {
-            padding-bottom: 5px;
-            padding-top: 8px;
-        }
     }
 
     &__collapse {
@@ -59,8 +53,12 @@
             width: 145px;
 
             #{$_this}__expand #{$_this}__star {
-                content: '';
-                padding-right: 7px;
+                margin-top: 4px;
+                padding: 3px;
+            }
+
+            #{$_this}__expand {
+                margin-left: 1px;
             }
         }
     }
