--- a/src/components/Rating/rating.scss
+++ b/src/components/Rating/rating.scss
@@ -26,8 +26,9 @@
         appearance: none;
         content: url('../../assets/starEmpty.svg');
         cursor: pointer;
-        margin: 0;
-        padding: 10px 8px 6px 0;
+        margin: 0 8px 0 0;
+        padding-bottom: 9px;
+        padding-top: 13px;
         position: relative;
 
         &:hover,
@@ -53,7 +54,7 @@
             width: 145px;
 
             #{$_this}__expand #{$_this}__star {
-                margin-top: 4px;
+                margin: 4px 0 0;
                 padding: 3px;
             }
 
