--- a/src/components/CategoryCard/category-card.scss
+++ b/src/components/CategoryCard/category-card.scss
@@ -1,4 +1,5 @@
 @import '../../styles/base/base';
+@import '../../styles/mixins/mixins';
 
 .card-wrapper {
     align-items: center;
@@ -8,14 +9,18 @@
     display: flex;
     height: 96px;
     justify-content: space-between;
+    line-height: $size-22;
+    max-width: 555px;
 
     &__info {
         display: flex;
         flex-direction: column;
+        overflow: hidden;
         padding: 25px 0 26px 16px;
     }
 
     &__name {
+        @include text-overflow-ellipsis;
         color: $color-pickled-bluewood;
         font-size: $size-24;
         font-weight: 900;
@@ -23,6 +28,7 @@
     }
 
     &__details {
+        @include text-overflow-ellipsis;
         color: $color-grey-8;
         font-size: $size-12;
         font-weight: 500;
@@ -30,6 +36,6 @@
     }
 
     &__icon {
-        padding-right: 16px;
+        transform: translateX(-15px);
     }
 }
