--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -21,10 +21,10 @@
     }
 
     &__reservations-cards {
-        align-items: center;
-        display: flex;
-        flex-wrap: wrap;
+        column-gap: 40px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 100%;
         justify-content: space-between;
-        margin-top: 25px;
     }
 }
