--- a/src/components/UserGreeting/user-greeting.scss
+++ b/src/components/UserGreeting/user-greeting.scss
@@ -1,11 +1,23 @@
 @import '../../styles/base/base';
 
+$_size-36: 36px;
+$_size-28: 26px;
+$_size-22: 16px;
+
 .greeting-wrapper {
     color: $color-pickled-bluewood;
-    font-size: $size-36;
+    font-size: $_size-36;
     font-weight: bold;
     line-height: normal;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+
+    @media (max-width: $breakpoint-laptop) {
+        font-size: $_size-28;
+    }
+
+    @media (max-width: $breakpoint-tablet) {
+        font-size: $_size-22;
+    }
 }
