fix confetti svg other small changes

--- a/src/components/NewsFeedCard/UsersReactions/users-reactions.scss
+++ b/src/components/NewsFeedCard/UsersReactions/users-reactions.scss
@@ -1,31 +1,41 @@
 @import '../../../styles/base/base';
 
- .user-reactions {
-     &__reaction, &__comment {
-         display: inline-block;
-         margin: 5px 15px 5px 0;
+.user-reactions {
+    &__reaction,
+    &__comment {
+        display: inline-block;
+        margin: 5px 15px 5px 0;
     }
-     &__reaction-icon, &__comment-icon, &__reaction-count, &__comment-count {
-         display: inline-block;
-         vertical-align: middle;
+
+    &__reaction-icon,
+    &__comment-icon,
+    &__reaction-count,
+    &__comment-count {
+        display: inline-block;
+        vertical-align: middle;
     }
-     &__reaction-count, &__comment-count {
-         font-size: 13px;
-         font-weight: $weight-medium;
-         color: $color-grey-8;
-         margin: 0;
-         padding-left: 5px;
+
+    &__reaction-count,
+    &__comment-count {
+        color: $color-grey-8;
+        font-size: $size-13;
+        font-weight: $weight-medium;
+        margin: 0;
+        padding-left: 5px;
     }
-     &__button {
-         background: transparent;
-         padding: 0;
-         border: none;
-         cursor: pointer;
-         &:focus {
-             outline-color: transparent;
+
+    &__button {
+        background: $transparent;
+        border: hidden;
+        cursor: pointer;
+        padding: 0;
+
+        &:focus {
+            outline-color: $transparent;
         }
     }
-     .disabled {
-         cursor: default;
+
+    .disabled {
+        cursor: default;
     }
 }
