--- a/src/components/NewsFeedCard/Comments/add-comment.scss
+++ b/src/components/NewsFeedCard/Comments/add-comment.scss
@@ -1,70 +1,72 @@
-@import "../../../styles/base/base";
+@import '../../../styles/base/base';
+
+$transparent: transparent;
 
 .comment-add {
-	display: flex;
-	flex-direction: row;
-	margin: 10px 0;
+    display: flex;
+    margin: 10px 0;
 
-	&__form {
-		margin-left: 5px;
-		width: 100%;
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: flex-start;
-		word-break: break-all;
-	}
+    &__form {
+        align-items: flex-start;
+        display: flex;
+        justify-content: space-between;
+        margin-left: 5px;
+        width: 100%;
+        word-break: break-all;
+    }
 
-	&__textField {
-		color: $color-grey-7;
-		font-size: $size-12;
-		flex: 0 0 80%;
-		padding: 10px;
+    &__textField {
+        color: $color-grey-7;
+        flex: 0 0 80%;
+        font-size: $size-12;
+        line-height: 24px;
+        padding: 5px 10px;
 
-		&:focus {
-			outline-color: transparent;
-			color: $color-grey-7;
-			background: $color-grey-2;
-			border-radius: 5px;
-		}
+        &:focus {
+            background: $color-grey-2;
+            border-radius: 5px;
+            color: $color-grey-7;
+            outline-color: $transparent;
+        }
 
-		&:empty:before {
-			content: "Leave a comment...";
-			color: $color-grey-chateau;
-		}
+        &:empty::before {
+            color: $color-grey-chateau;
+            content: 'Leave a comment...';
+        }
 
-		&:not(:empty) {
-			background: $color-grey-2;
-			border-radius: 5px;
-		}
-	}
+        &:not(:empty) {
+            background: $color-grey-2;
+            border-radius: 5px;
+        }
+    }
 
-	&__submitButton {
-		border: none;
-		background: none;
-		padding: 10px 6px;
-		min-width: 40px;
+    &__submitButton {
+        background: none;
+        border: hidden;
+        margin-top: 5px;
+        min-width: 40px;
+        padding: 5px 6px;
 
-		&[value] {
-			text-transform: uppercase;
-      font-family: $main-font;
-      font-weight: $weight-medium;
-			font-size: $size-12;
-			color: $color-grey-6;
+        &[value] {
+            color: $color-grey-6;
+            font-family: $main-font;
+            font-size: $size-12;
+            font-weight: $weight-medium;
+            text-transform: uppercase;
 
-			&:hover {
-				cursor: pointer;
-				color: $color-blue-dark;
-			}
+            &:hover {
+                color: $color-blue-dark;
+                cursor: pointer;
+            }
 
-			&:focus {
-				outline-color: transparent;
-				background: none;
-			}
-		}
-	}
+            &:focus {
+                background: none;
+                outline-color: $transparent;
+            }
+        }
+    }
 
-	.user-avatar {
-		margin-top: 5px;
-	}
+    .user-avatar {
+        margin-top: 5px;
+    }
 }
