--- a/src/components/NewsFeedCard/news-feed.scss
+++ b/src/components/NewsFeedCard/news-feed.scss
@@ -1,43 +1,12 @@
 .newsFeed {
+    column-gap: 40px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
     margin: 64px 0;
     row-gap: 70px;
 
     &__card {
-        max-width: 395px;
         min-width: 395px;
-
-        &:nth-child(3n + 1) {
-            justify-self: start;
-        }
-
-        &:nth-child(3n + 2) {
-            justify-self: center;
-        }
-
-        &:nth-child(3n + 0) {
-            justify-self: end;
-        }
-    }
-}
-
-@media only screen and (max-width: 1400px) {
-    .newsFeed {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        row-gap: 70px;
-
-        &__card {
-            min-width: 395px;
-
-            &:nth-child(odd) {
-                justify-self: start;
-            }
-
-            &:nth-child(even) {
-                justify-self: end;
-            }
-        }
     }
 }
