remove float and clearfix from newsfeed card put back outlines

--- a/src/components/NewsFeedCard/Comments/comments.scss
+++ b/src/components/NewsFeedCard/Comments/comments.scss
@@ -11,9 +11,12 @@
     margin: 5px 0;
 
     &__user-name {
-        float: left;
         font-weight: $weight-medium;
         padding-right: 10px;
         text-transform: uppercase;
+    }
+
+    &__text {
+        word-break: break-all;
     }
 }
