--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -4,12 +4,5 @@
     background-color: $color-white;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
-    font-family: $main-font; //delete when implemented
-    padding: 0 15px;
-}
-
-.clearfix::after {
-    clear: both;
-    content: '';
-    display: table;
+    padding: 5px 15px;
 }
