--- a/src/components/NewsFeedCard/Comments/add-comment.scss
+++ b/src/components/NewsFeedCard/Comments/add-comment.scss
@@ -4,7 +4,8 @@ $transparent: transparent;
 
 .comment-add {
     display: flex;
-    margin: 10px 0;
+    margin-bottom: 5px;
+    margin-top: 10px;
 
     &__form {
         align-items: flex-start;
@@ -17,7 +18,7 @@ $transparent: transparent;
 
     &__textField {
         color: $color-grey-7;
-        flex: 0 0 80%;
+        flex: 1 0 80%;
         font-size: $size-12;
         line-height: 24px;
         padding: 5px 10px;
@@ -60,8 +61,8 @@ $transparent: transparent;
             }
 
             &:focus {
-                background: none;
-                outline-color: $transparent;
+                background: $color-grey-90;
+                outline: none;
             }
         }
     }
