--- a/src/components/NewsFeedCard/news-feed.scss
+++ b/src/components/NewsFeedCard/news-feed.scss
@@ -1,7 +1,7 @@
 .newsFeed {
     column-gap: 40px;
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
     margin: 64px 0;
     row-gap: 70px;
