--- a/src/components/CategoryCard/category-card.scss
+++ b/src/components/CategoryCard/category-card.scss
@@ -2,13 +2,11 @@
 @import '../../styles/mixins/mixins';
 
 .card-wrapper {
-    align-items: center;
+    @include flex-space-between;
     background: $color-alabaster;
     border-radius: 8px;
     box-shadow: 0 8px 23px rgba(0, 0, 0, 0.25);
-    display: flex;
     height: 96px;
-    justify-content: space-between;
     line-height: $size-22;
     max-width: 555px;
 
