--- a/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
+++ b/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
@@ -2,8 +2,12 @@
 @import '../../../styles/base/base';
 
 .restaurant-card {
+    box-sizing: border-box;
+    height: 100%;
+    padding-bottom: 16px;
+
     &__top {
-        height: 185px;
+        height: 80%;
         position: relative;
     }
 
@@ -16,7 +20,7 @@
     }
 
     &__categories {
-        bottom: 10px;
+        bottom: 0;
         padding: 0 16px;
         position: absolute;
         width: calc(100% - 32px);
@@ -24,41 +28,38 @@
     }
 
     &__background {
-        background: linear-gradient(
+        height: 100%;
+        position: absolute;
+        width: 100%;
+    }
+
+    &__background::after {
+        background-image: linear-gradient(
             180deg,
             rgba(255, 255, 255, 0) 0%,
             #fff 100%
         );
-        height: 180px;
+        content: '';
+        display: block;
+        height: 100%;
         position: absolute;
+        top: 0;
         width: 100%;
-        z-index: $z-index-base;
     }
 
     &__image {
         border-radius: 8px 8px 0 0;
-        height: 180px;
+        height: 100%;
         object-fit: cover;
         width: 100%;
     }
 
-    &__middle {
-        height: 30px;
-        margin: 0;
-        padding: 0 16px 16px;
-        position: relative;
-    }
-
     &__title-like {
         @include flex-space-between;
-        position: absolute;
-        top: -16px;
-        width: calc(100% - 32px);
-        z-index: $z-index-timeline;
+        padding: 0 16px;
     }
 
     &__hours {
-        position: absolute;
-        top: 12px;
+        padding-left: 16px;
     }
 }
