--- a/src/components/RestaurantCards/BestRestaurantWrapper/best-restaurant-wrapper.scss
+++ b/src/components/RestaurantCards/BestRestaurantWrapper/best-restaurant-wrapper.scss
@@ -4,12 +4,6 @@
     background-color: $color-porcelain;
     column-gap: 40px;
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 395px));
-    justify-content: center;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     padding: 64px 0;
-
-    @media (max-width: 1300px) {
-        grid-template-columns: auto;
-        row-gap: 40px;
-    }
 }
