--- a/src/components/GreetingWidget/greeting-widget.scss
+++ b/src/components/GreetingWidget/greeting-widget.scss
@@ -5,3 +5,9 @@
     flex-direction: column;
     max-width: 600px;
 }
+
+@media (max-width: $breakpoint-tablet) {
+    .widget-block {
+        margin-bottom: 20px;
+    }
+}
