--- a/src/components/NewsFeedCard/Comments/add-comment.scss
+++ b/src/components/NewsFeedCard/Comments/add-comment.scss
@@ -4,8 +4,8 @@ $transparent: transparent;
 
 .comment-add {
     display: flex;
-    margin-bottom: 5px;
     margin-top: 10px;
+    padding: 0 15px 10px;
 
     &__form {
         align-items: flex-start;
@@ -13,12 +13,12 @@ $transparent: transparent;
         justify-content: space-between;
         margin-left: 5px;
         width: 100%;
-        word-break: break-all;
+        word-break: break-word;
     }
 
     &__textField {
         color: $color-grey-7;
-        flex: 1 0 80%;
+        flex: 1;
         font-size: $size-12;
         line-height: 24px;
         padding: 5px 10px;
