--- a/src/components/NewsFeedCard/UsersReactions/users-reactions.scss
+++ b/src/components/NewsFeedCard/UsersReactions/users-reactions.scss
@@ -1,6 +1,8 @@
 @import '../../../styles/base/base';
 
 .user-reactions {
+    padding: 0 15px;
+
     &__reaction,
     &__comment {
         display: inline-block;
