--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,4 +7,5 @@ $z-index-higher: 2;
 $z-index-timeline: 100;
 
 $breakpoint-tablet: 768px;
-$breakpoint-laptop: 1024px;
+$breakpoint-tablet-landscape: 1024px;
+$breakpoint-laptop: 1200px;
