--- a/src/components/CardContainer/card-container.scss
+++ b/src/components/CardContainer/card-container.scss
@@ -3,7 +3,7 @@
 .card-container {
     background-color: $color-white;
     border-radius: 8px;
-    max-width: 395px;
+    height: 100%;
 
     &--shadow {
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
