--- a/src/components/Divider/divider.scss
+++ b/src/components/Divider/divider.scss
@@ -5,6 +5,5 @@ $color-divider: #d3dce6;
 .divider {
     background-color: $color-divider;
     height: 1px;
-    margin: 0 auto;
-    width: 100%;
+    margin: 0 15px;
 }
