--- a/src/components/NewsFeedCard/Comments/comments.scss
+++ b/src/components/NewsFeedCard/Comments/comments.scss
@@ -3,8 +3,7 @@
 .comment-section {
     color: $color-grey-7;
     font-size: $size-12;
-    padding: 5px 0;
-    width: 100%;
+    padding: 5px 15px;
 }
 
 .comment {
@@ -17,6 +16,6 @@
     }
 
     &__text {
-        word-break: break-all;
+        word-break: break-word;
     }
 }
