--- a/src/components/RestaurantCards/RestaurantIntroCard/restaurant-intro-card.scss
+++ b/src/components/RestaurantCards/RestaurantIntroCard/restaurant-intro-card.scss
@@ -4,7 +4,8 @@
 .restaurant-intro-card {
     @include flex-center;
     flex-direction: column;
-    padding: 53px 40px;
+    height: 100%;
+    margin: 0 15px;
 
     &__heading {
         color: $color-black;
@@ -13,5 +14,12 @@
         margin: 0 0 24px;
         opacity: 0.7;
         text-align: center;
+    }
+}
+
+@media (max-width: $breakpoint-tablet-landscape) {
+    .restaurant-intro-card {
+        height: auto;
+        padding: 30px 0;
     }
 }
