--- a/src/components/WeatherWidget/weather-widget.scss
+++ b/src/components/WeatherWidget/weather-widget.scss
@@ -17,8 +17,42 @@
     &__icon-place {
         width: 116px;
     }
+}
 
-    @media (max-width: $breakpoint-laptop) {
+@media (max-width: $breakpoint-laptop) {
+    .widget {
+        height: 150px;
+        margin-right: 90px;
         max-width: 280px;
+
+        &__icon-place {
+            width: 90px;
+
+            .icon > svg {
+                height: 100%;
+                width: 180px;
+            }
+        }
+    }
+}
+
+@media (max-width: $breakpoint-tablet) {
+    .widget {
+        height: 150px;
+        margin-bottom: 0;
+        margin-right: 0;
+        max-width: calc(100% - 90px);
+        position: relative;
+
+        &__icon-place {
+            left: 100%;
+            position: absolute;
+            transform: translateX(-100%);
+
+            .icon > svg {
+                height: 100%;
+                width: 180px;
+            }
+        }
     }
 }
