SOUR-23 Create initial categories section, add food icons, move eat-out page into it's seperate folder

--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -1,6 +1,9 @@
 @import '../../styles/base/base';
 
 .dashboard {
+    margin: 0 auto;
+    max-width: 1265px;
+
     &__header {
         display: flex;
         height: 100%;
