--- a/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
+++ b/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
@@ -31,20 +31,20 @@
         height: 100%;
         position: absolute;
         width: 100%;
-    }
 
-    &__background::after {
-        background-image: linear-gradient(
-            180deg,
-            rgba(255, 255, 255, 0) 0%,
-            #fff 100%
-        );
-        content: '';
-        display: block;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        width: 100%;
+        &::after {
+            background-image: linear-gradient(
+                180deg,
+                rgba(255, 255, 255, 0) 0%,
+                $color-white 100%
+            );
+            content: '';
+            display: block;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            width: 100%;
+        }
     }
 
     &__image {
