--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -29,8 +29,9 @@
 @media (max-width: $breakpoint-laptop) {
     .dashboard {
         &__reservations-cards {
+            align-items: end;
             column-gap: 20px;
-            margin-top: 80px;
+            margin-top: 40px;
         }
     }
 }
