1. update SVGIcon component with icons and replace in places to use it instead of SVG 2. Switch UserProfile (that was SVG) with UserAvatar component to make it dynamic 3. Update UserAvatar styling in header

--- a/src/components/UserProfile/user-profile.scss
+++ b/src/components/UserProfile/user-profile.scss
@@ -1,5 +1,4 @@
-@import '../../styles/base/typography';
-@import '../../styles/base/colors';
+@import '../../styles/base/base';
 
 .widget-container {
     align-items: center;
@@ -9,21 +8,25 @@
 
 .profile {
     position: relative;
-    width: 40px;
 
     &__btn {
+        background: none;
         border: 0;
         border-radius: 50%;
         cursor: pointer;
-        height: 40px;
-        outline: 0;
-        width: 40px;
+        padding: 0;
     }
 
-    &__icon-placeholder {
-        left: 0;
+    .user-avatar {
+        &__image {
+            transform: scale(1.5) translateY(5px);
+        }
+    }
+
+    &__dropdown-arrow {
+        bottom: 10px;
         position: absolute;
-        top: 0;
+        right: -5px;
     }
 }
 
