SOUR-63 Fix restaurant card top height in tablet mode

--- a/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
+++ b/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
@@ -9,6 +9,10 @@
     &__top {
         height: 80%;
         position: relative;
+
+        @media (max-width: $breakpoint-tablet-landscape) {
+            height: 185px;
+        }
     }
 
     &__checkins-rating {
