SOUR-59 Rename and relocate RestWebAddress component and fix line-height and padding

--- a/src/components/RestaurantInfo/RestWebAddress/rest-web-address.scss
+++ b/src/components/RestaurantInfo/RestWebAddress/rest-web-address.scss
@@ -6,10 +6,10 @@
     display: flex;
 
     &__text {
-        line-height: 13px;
+        line-height: 1.1;
         font-size: $size-12;
         font-weight: $weight-medium;
-        padding-left: 9px;
+        padding-left: 10px;
         text-transform: uppercase;
     }
 }
