--- a/src/components/Form/FormContainer/form-container.scss
+++ b/src/components/Form/FormContainer/form-container.scss
@@ -32,7 +32,7 @@
     }
 
     &__sign-link {
-        color: $color-purple-dark;
+        color: $color-electric-violet;
         padding-left: 3px;
         text-decoration: none;
     }
