--- a/src/components/RestaurantInfo/RestWebAddress/rest-web-address.scss
+++ b/src/components/RestaurantInfo/RestWebAddress/rest-web-address.scss
@@ -1,4 +1,4 @@
-@import '../../styles/base/base';
+@import '../../../styles/base/base';
 
 .restaurant-contact {
     align-items: center;
@@ -9,6 +9,7 @@
         line-height: 1.1;
         font-size: $size-12;
         font-weight: $weight-medium;
+        margin: 6px 0;
         padding-left: 10px;
         text-transform: uppercase;
     }
