SOUR-65-Add fixed modifier to restaurant card

--- a/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
+++ b/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
@@ -10,6 +10,10 @@
         height: 80%;
         position: relative;
 
+        &--fixed {
+            height: 185px;
+        }
+
         @media (max-width: $breakpoint-tablet-landscape) {
             height: 185px;
         }
