--- a/src/components/Rating/rating.scss
+++ b/src/components/Rating/rating.scss
@@ -23,27 +23,18 @@
     justify-content: flex-end;
     width: 145px;
 
+    &__input {
+        display: none;
+        //visibility: visible !important;
+        //opacity: 0 !important;
+    }
+
     &__star {
-        appearance: none;
-        content: url('../../assets/starEmpty.svg');
         cursor: pointer;
         margin: 0 8px 0 0;
         padding-bottom: 9px;
         padding-top: 13px;
         position: relative;
-
-        &:hover,
-        &:checked {
-            content: url('../../assets/starFilled.svg');
-            ~ #{$_this}__star {
-                content: url('../../assets/starFilled.svg');
-            }
-        }
-    }
-
-    &__expand {
-        direction: rtl;
-        unicode-bidi: bidi-override;
     }
 
     &__collapse {
