--- a/src/components/CardContainer/card-container.scss
+++ b/src/components/CardContainer/card-container.scss
@@ -5,6 +5,6 @@
     border-radius: 8px;
 
     &--shadow {
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
+        box-shadow: 0 2px 6px $transperent-black-25;
     }
 }
