--- a/src/components/Carousel/carousel.scss
+++ b/src/components/Carousel/carousel.scss
@@ -1,24 +1,21 @@
 @import '../../styles/base/base';
 
-.carousel-body {
-    background-color: $color-white;
-    border-radius: 10px;
-    box-shadow: 0 2px 6px $transperent-black-25;
-    min-height: 320px;
-    width: 100%;
-}
-
-.slides {
-    display: inline-flex;
-    overflow: hidden;
-    width: 820px;
-}
-
-.slides img {
-    border-radius: 10px 0 0 10px;
-    flex-shrink: 0;
+.carousel {
+    display: flex;
     max-height: 320px;
-    object-fit: cover;
-    transition: 300ms;
     width: 100%;
+
+    &__slides {
+        display: inline-flex;
+        max-width: 820px;
+        overflow: hidden;
+    }
+
+    &__image {
+        border-radius: 10px 0 0 10px;
+        flex-shrink: 0;
+        object-fit: cover;
+        transition: 300ms;
+        width: 100%;
+    }
 }
