--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -22,7 +22,7 @@
         color: $color-pickled-bluewood;
         font-weight: 900;
         line-height: 32px;
-        margin: 0;
+        margin: 0 0 40px;
     }
 }
 
