--- a/src/components/CategoryCard/category-card.scss
+++ b/src/components/CategoryCard/category-card.scss
@@ -34,6 +34,10 @@
 
     &__icon {
         transform: translateX(-15px);
+
+        &--outside {
+            transform: translateX(30px);
+        }
     }
 }
 
