--- a/src/pages/EatOut/eat-out.scss
+++ b/src/pages/EatOut/eat-out.scss
@@ -7,8 +7,8 @@
     &__categories-wrapper {
         column-gap: 70px;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        margin-top: 70px;
+        grid-template-columns: repeat(4, 1fr);
+        margin: 70px 30px 70px 0;
         row-gap: 60px;
     }
 }
