SOUR-65-Add onClick to link component and reduce padding

--- a/src/components/Link/link.scss
+++ b/src/components/Link/link.scss
@@ -5,7 +5,7 @@
     font-weight: $weight-regular;
     height: 40px;
     line-height: 1.7;
-    padding: 8px 24px;
+    padding: 8px 16px 0;
     text-decoration: none;
     text-transform: uppercase;
 
