--- a/src/components/DiscoverRestaurantSection/discover-restaurant-section.scss
+++ b/src/components/DiscoverRestaurantSection/discover-restaurant-section.scss
@@ -7,4 +7,15 @@
     grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-template-rows: auto;
     row-gap: 40px;
+
+    @media (max-width: $breakpoint-tablet-landscape) {
+        column-gap: 20px;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        row-gap: 20px;
+    }
+
+    @media (max-width: $breakpoint-tablet) {
+        grid-template-columns: 1fr;
+        row-gap: 20px;
+    }
 }
