--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -12,6 +12,7 @@ $color-mirage: #1f2d3d;
 $color-pickled-bluewood: #31465e;
 $color-porcelain: #f6f7f8;
 $color-regent-gray: #8492a6;
+$color-silver: #c4c4c4;
 
 $color-blue-dark: #001836;
 $color-grey-8: #627485;
