--- a/src/styles/base/_config.scss
+++ b/src/styles/base/_config.scss
@@ -9,3 +9,14 @@
         color: $color-grey-3;
     }
 }
+
+.label-red {
+    color: $color-red;
+    font-size: $size-10;
+    text-transform: uppercase;
+}
+
+.description-grey {
+    color: $color-grey-6;
+    font-size: $size-16;
+}
