--- a/src/pages/EatOut/eat-out.scss
+++ b/src/pages/EatOut/eat-out.scss
@@ -4,18 +4,18 @@
     margin: 0 auto;
     max-width: 1265px;
 
-    &__heading {
+    &__title {
         color: $color-pickled-bluewood;
         font-size: $size-36;
         font-weight: 700;
         line-height: 42px;
         margin: 0 0 30px;
+    }
 
-        &--small {
-            color: $color-blue-dark;
-            font-size: $size-24;
-            font-weight: 500;
-        }
+    &__heading {
+        color: $color-blue-dark;
+        font-size: $size-24;
+        font-weight: 500;
     }
 
     &__categories-section {
