SOUR-65-Add color variable midnight

--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -8,6 +8,7 @@ $color-fiord: #3e5067;
 $color-geyser: #d3dce6;
 $color-grey-chateau: #9ea7b3;
 $color-mercury: #e5e5e5;
+$color-midnight: #001836;
 $color-mirage: #1f2d3d;
 $color-pickled-bluewood: #31465e;
 $color-porcelain: #f6f7f8;
