--- a/src/pages/CategoryRestaurants/category-restaurants.scss
+++ b/src/pages/CategoryRestaurants/category-restaurants.scss
@@ -6,8 +6,9 @@
 
     &__heading {
         color: $color-pickled-bluewood;
-        font-weight: 900;
-        line-height: 32px;
-        margin: 0 0 40px;
+        font-size: $size-36;
+        font-weight: 700;
+        line-height: 42px;
+        margin: 0 0 30px;
     }
 }
