SOUR-65-Modify Link's scss with color and cursor

--- a/src/components/Link/link.scss
+++ b/src/components/Link/link.scss
@@ -1,6 +1,8 @@
 @import '../../styles/base/base';
 
 .link {
+    color: $color-link;
+    cursor: pointer;
     font-size: $size-14;
     font-weight: $weight-regular;
     height: 40px;
