--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,3 +9,5 @@ $z-index-timeline: 100;
 $breakpoint-tablet: 768px;
 $breakpoint-tablet-landscape: 1024px;
 $breakpoint-laptop: 1200px;
+
+$column-gap-small: 40px;
