SOUR-65-Modify files according to stylelint

--- a/src/components/RestaurantCards/RestaurantBigCard/restaurant-big-card.scss
+++ b/src/components/RestaurantCards/RestaurantBigCard/restaurant-big-card.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/base/base';
+
 .restaurant-card {
     &__bottom {
         display: flex;
@@ -6,15 +8,15 @@
     }
 
     &__description {
-        color: #6a7889; // slate-grey
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        color: $color-slate-grey;
         display: -webkit-box;
         font-weight: 400;
         height: 72px;
         line-height: 1.5;
         overflow: hidden;
         text-overflow: ellipsis;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 3;
 
         &--collapsed {
             height: 72px;
@@ -22,9 +24,9 @@
         }
 
         &--expanded {
+            display: inline-block;
             height: auto;
             overflow: visible;
-            display: inline-block;
         }
     }
 
