--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -13,6 +13,7 @@ $color-mirage: #1f2d3d;
 $color-pickled-bluewood: #31465e;
 $color-porcelain: #f6f7f8;
 $color-regent-gray: #8492a6;
+$color-slate-grey: #6a7889;
 
 $color-blue-dark: #001836;
 $color-grey-8: #627485;
