--- a/src/components/RestaurantInfo/RestCategories/rest-categories.scss
+++ b/src/components/RestaurantInfo/RestCategories/rest-categories.scss
@@ -4,7 +4,7 @@
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    padding: 4px 0;
+    padding: 2px 0;
 
     &__name {
         color: $color-grey-6;
@@ -14,9 +14,11 @@
     }
 
     &__icon {
+        display: flex;
+
         svg {
             flex-shrink: 0;
-            padding: 3px 12px;
+            padding: 0 12px;
         }
     }
 }
