--- a/src/components/CategoryCard/category-card.scss
+++ b/src/components/CategoryCard/category-card.scss
@@ -39,6 +39,10 @@
             transform: translateX(30px);
         }
     }
+
+    &__link {
+        text-decoration: none;
+    }
 }
 
 @media (max-width: $breakpoint-laptop) {
